feat: добавил рассчет эпиков и все нужные поля